@@ -10,11 +10,16 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.11.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs += [
+            "-XX:+EnableDynamicAgentLoading",   // pozwala na dynamiczne ładowanie agentów
+            "-Djdk.instrument.traceUsage=false" // wyłącza dodatkowe śledzenie ładowania agentów
+    ]
 }
